banking-app/main/default/objects/Loan_Application__c/fields/Annual_Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Net_Income__c</fullName>
    <label>Annual Net Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>