banking-app/main/default/objects/Loan_Application__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loan Applications</relationshipLabel>
    <relationshipName>Loan_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>