banking-app/main/default/objects/Loan_Application__c/fields/House_Cost__c.field-meta.xml
<CustomField>
    <fullName>House_Cost__c</fullName>
    <label>House Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>