banking-app/main/default/objects/Loan_Application__c/fields/Loan_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Loan_Duration_Months__c</fullName>
    <label>Loan Duration (Months)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>