banking-app/main/default/objects/Loan_Application__c/fields/Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reject_Reason__c</fullName>
    <label>Reject Reason</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>