banking-app/main/default/objects/Loan_Application__c/fields/Work_Situation__c.field-meta.xml
<CustomField>
    <fullName>Work_Situation__c</fullName>
    <label>Work Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employed Full-Time</fullName>
            </value>
            <value>
                <fullName>Employed Part-Time</fullName>
            </value>
            <value>
                <fullName>Self-Employed</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>